# FReT

./: .gitignore  AGENTS.md  LICENSE  README.md  fret.py  pyproject.toml  test_fret.py
data/: SN_m_tot_V2.0.csv  SN_ms_tot_V2.0.csv
examples/: 01.synthetic_data.ipynb  02.dynamical_systems.ipynb  03.sunspot_number.ipynb
